@@ -55,8 +55,7 @@ elm (4,604)				languageCode	HumanStringLanguage
 
 section main
 elm (4,1)			targetInfo		ExplainCategory
-elm (4,1)/(4,600)		targetCommonInfo			-
-elm (4,1)/(4,600)/$commonInfo	x					-
+elm (4,1)/(4,600):commonInfo	targetCommonInfo			-
 elm (4,1)/(4,102)		targetName		TargetName
 elm (4,1)/(4,103)		recentNews				-
 elm (4,1)/(4,104)		icon					-
@@ -78,12 +77,10 @@ elm (4,1)/(4,118)		dbCombinations				-
 elm (4,1)/(4,118)/(4,605)	databaseList				-
 elm (4,1)/(4,118)/(4,605)/(4,102)	databaseName			-
 elm (4,1)/(4,119)		addresses				-
-elm (4,1)/(4,500)		commonAccessInfo			-
-elm (4,1)/(4,500)/$accessInfo	x					-
+elm (4,1)/(4,500):accessInfo	commonAccessInfo			-
 
 elm (4,2)			databaseInfo		ExplainCategory
-elm (4,2)/(4,600)		databaseCommonInfo			-
-elm (4,2)/(4,600)/$commonInfo	x					-
+elm (4,2)/(4,600):commonInfo	databaseCommonInfo			-
 elm (4,2)/(4,102)		databaseName		DatabaseName
 elm (4,2)/(4,226)		explainDatabase				-
 elm (4,2)/(4,114)		nicknames				-
@@ -120,5 +117,4 @@ elm (4,2)/(4,222)		copyrightNotice				-
 elm (4,2)/(4,223)		producerContactInfo			-
 elm (4,2)/(4,224)		supplierContactInfo			-
 elm (4,2)/(4,225)		submissionContactInfo			-
-elm (4,2)/(4,500)		databaseAccessInfo			-
-elm (4,2)/(4,500)/$accessInfo	x					-
+elm (4,2)/(4,500):accessInfo	databaseAccessInfo			-
